# DecoderSDK

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  优化建议.md  后续优化点-备忘,md  后续待完成.txt
cmake/: DecoderSDKConfig.cmake.in  DecoderSDKInstall.cmake
examples/: CMakeLists.txt  EventDispatcherExample.cpp
examples/console/: CMakeLists.txt  decoder_usage_example.cpp
examples/d3d_render_example/: CMakeLists.txt  D3DRenderer.cpp  D3DRenderer.h  main.cpp
examples/qt_gui/: CMakeLists.txt
examples/qt_gui/src/: CMakeLists.txt  SimplePlayer.cpp  SimplePlayer.h  SimplePlayer.ui  main.cpp
examples/qt_gui/src/VideoPlayer/: CommonDef.h  Commonutils.cpp  Commonutils.h  RtspStreamPlayer.cpp  RtspStreamPlayer.h  StreamDecodeWorker.cpp  StreamDecodeWorker.h  StreamManager.cpp  StreamManager.h
examples/qt_gui/src/VideoPlayer/VideoRender/: AudioBufferQueue.cpp  AudioBufferQueue.h  AudioRender.cpp  AudioRender.h  Nv12Render_Cuda.cpp  Nv12Render_Cuda.h  Nv12Render_D3d11va.cpp  Nv12Render_D3d11va.h  Nv12Render_Dxva2.cpp  Nv12Render_Dxva2.h  Nv12Render_Vaapi.cpp  Nv12Render_Vaapi.h  RenderBufferQueue.cpp  RenderBufferQueue.h  RenderWorker.cpp  RenderWorker.h  SoftwareRender.cpp  SoftwareRender.h  VideoPlayer.cpp  VideoPlayer.h  VideoPlayerImpl.cpp  VideoPlayerImpl.h  VideoRender.cpp  VideoRender.h
resources/: CMakeLists.txt  decoderSDK.json
src/: AudioDecoder.cpp  AudioDecoder.h  CMakeLists.txt  Clock.cpp  Clock.h  DecoderBase.cpp  DecoderBase.h  DecoderController.cpp  DecoderController.h  DecoderManager.cpp  DecoderManager.h  DecoderSDK.rc  Demuxer.cpp  Demuxer.h  EventDispatcher.cpp  EventDispatcher.h  Frame.cpp  Frame.h  FrameQueue.cpp  FrameQueue.h  HardwareAccel.cpp  HardwareAccel.h  Logger.cpp  Logger.h  MediaRecorder.cpp  MediaRecorder.h  Packet.cpp  Packet.h  PacketQueue.cpp  PacketQueue.h  SyncController.cpp  SyncController.h  Utils.cpp  Utils.h  VideoDecoder.cpp  VideoDecoder.h  decoder_controller.cpp  decoder_controller.h  main.cpp  sdk_global.h  (+2 more)
src/api/: common_define.cpp  decoder_controller.cpp  frame.cpp  frame_queue.cpp  vaapi_utils.cpp  zohe_ws_decoder_controller.cpp
src/base/: Frame.cpp  Frame.h  base_define.h  define.h  frame.cpp  frame.h  frame_queue.cpp  frame_queue.h  packet.cpp  packet.h  packet_queue.cpp  packet_queue.h  version.cpp  version.h  version.h.in
src/decoder/: BaseDecoder.cpp  BaseDecoder.h  audio_decoder.cpp  audio_decoder.h  decoder_base.cpp  decoder_base.h  hardware_accel.cpp  hardware_accel.h  video_decoder.cpp  video_decoder.h
src/demuxer/: demuxer.cpp  demuxer.h
src/event_system/: event_dispatcher.cpp  event_dispatcher.h
src/include/decodersdk/: common_define.h  decoder_controller.h  decoder_sdk_def.h  frame.h  frame_queue.h  sdk_global.h  vaapi_utils.h  zohe_ws_decoder_controller.h
src/logger/: Logger.cpp  Logger.h  logger.cpp  logger.h  logger_sink.h
src/recorder/: real_time_stream_recorder.cpp  real_time_stream_recorder.h
src/stream_sync/: clock.cpp  clock.h  stream_sync_manager.cpp  stream_sync_manager.h
src/utils/: Clock.cpp  Clock.h  FrameQueue.cpp  FrameQueue.h  PacketQueue.cpp  PacketQueue.h  common_utils.cpp  common_utils.h
src/vaapi/: ffmpeg_compat.h  ffmpeg_utils.cpp  ffmpeg_utils.h  sys_deps.h  vaapi_compat.h  vaapi_utils.cpp  vaapi_utils.h
